...
                            value = deeprInfo.link,
                            onValueChange = {
                                deeprInfo = deeprInfo.copy(link = it)
                                isError = false
                            },
                            modifier = Modifier.fillMaxWidth(),
                            placeholder = { Text("https://example.com or app://deeplink") },
                            isError = isError,
                            supportingText = {
                                if (isError) {
                                    Text(text = stringResource(R.string.invalid_empty_deeplink))
                                }
                            },
...
